bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: not found: value ||
  if((Math.abs(n-100)<=10 && Math.abs(n-100)>=0)) || (Math.abs(n-200)<=10 && Math.abs(n-200>=0)){
                                                  ^NearHundred:2: error: overloaded method value abs with alternatives:
  (x$1: Double)Double <and>
  (x$1: Float)Float <and>
  (x$1: Long)Long <and>
  (x$1: Int)Int
 cannot be applied to (Boolean)
  if((Math.abs(n-100)<=10 && Math.abs(n-100)>=0)) || (Math.abs(n-200)<=10 && Math.abs(n-200>=0)){
                                                                                  ^